# Pandore-GUI-Modules

./: CMakeLists.txt  Readme.txt
app/: main_regionmerging.cpp  main_watershed.cpp
include/: functions.h  helpwindow.h  imagecanvas.h  regionmerging.h  watershed.h
resources/: mdi.qrc
resources/ui/: helpwindow.ui  regionmerging.ui  watershed.ui
src/common/: functions.cpp
src/gui/: helpwindow.cpp  imagecanvas.cpp
src/modules/: regionmerging.cpp  watershed.cpp
